tests/NormalTests/paczka1/fuzzy1/50372126.err
Error in line 6: KVFfYhTA459T122,4
Error in line 4: KVFfYh A459 77,5
Error in line 10: 2k0rVqXQW A459 64,7
Error in line 12: NeplJf A315 3,6
Error in line 15: 2k0rVqXQW A315 0,0
Error in line 36: Dk8SzL A315 70,1
